# sillybot

./: .gitignore  BUILD  Cargo.toml  LICENSE
src/: bot.rs  commands.rs  lib.rs  logger.rs  main.rs  sql.rs  sql.rs.test
src/bot/: bothandler.rs  cmdhandler.rs  events.rs  handler.rs  mod.rs
src/bot/commands/: cmd.rs  handler.rs  messages.rs  mod.rs  newuser.rs  permission.rs  ping.rs  registry.rs  testinput.rs
src/bot/database/: dbhandler.rs  handler.rs  mod.rs  repositories.rs  userdb.rs
src/bot/database/data/: mod.rs  user.rs
src/bot/database/repository/: user.rs
src/commands/: mod.rs  ping.rs  testinput.rs
src/database/: connection.rs  handler.rs  mod.rs
src/database/data/: item.rs  message.rs  messages.rs  mod.rs  permission.rs  user.rs
src/database/repository/: message.rs  messages.rs  mod.rs  permission.rs  user.rs
src/util/: funcs.rs  logger.rs  mod.rs
