[package]
name = "sillybot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
# owo-colors = "4.1.0"
rand = { version = "0.8.5" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0.210"
serenity = "0.12.2"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
simplelog = "0.12.2"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
tokio-rusqlite = "0.6.0"
strum_macros = "0.26.4"

[profile.release]
strip = true
opt-level = 3
lto = true
