[package]
name = "sillybot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
rand = { version = "0.8.5" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0.210"
serenity = { version = "0.12.2", features = ["gateway"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
simplelog = "0.12.2"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
tabled = "0.16.0"

[profile.release]
strip = true
opt-level = 3
lto = true
